small changes throughout chapter 10

--- a/exercises/10_04_exercises.tex
+++ b/exercises/10_04_exercises.tex
@@ -20,3 +20,4 @@
 \exinput{exercises/10_04_ex_39}
 \exinput{exercises/10_04_ex_40}
 \exinput{exercises/10_04_ex_41}
+\exinput{exercises/10_04_ex_43}
