--- a/exercises/10_05_ex_10.tex
+++ b/exercises/10_05_ex_10.tex
@@ -3,6 +3,6 @@
 {Answers can vary; here the direction is given by $\vec d_1\times \vec d_2$:
 vector: $\ell(t) = \la 5,1,9\ra + t\la 0,-1,0\ra$\\
 parametric: $x= 5$, $y=1-t$, $z = 9$\\
-symmetric: not defined, as some components of the direction are 0.
+symmetric: $x=5$, $z=9$
 }
 
