--- a/text/10_Dot_Product.tex
+++ b/text/10_Dot_Product.tex
@@ -34,9 +34,10 @@ The dot product, as shown by the preceding example, is very simple to evaluate. 
 {Let $\vec u$, $\vec v$ and $\vec w$ be vectors in $\mathbb{R}^2$ or $\mathbb{R}^3$ and let $c$ be a scalar.\index{dot product!properties}\index{vectors!dot product}
 \begin{enumerate}
 	\item \parbox{150pt}{$\dotp uv = \dotp vu$}{Commutative Property}
-	\item \parbox{150pt}{$\vec u\cdot(\vec v+\vec w) = \dotp uv + \dotp uw$}{Distributive Property}
+	\item \parbox{150pt}{$\vec u\cdot(\vec v\pm \vec w) = \dotp uv \pm \dotp uw$}{Distributive Property}
+	\item \parbox{150pt}{$(\vec u\pm \vec v) \cdot \vec w = \dotp uw \pm \dotp vw$}{Distributive Property}
 	\item	$c(\dotp uv) = (c\vec u)\cdot \vec v = \vec u \cdot (c\vec v)$
-	\item	$\dotp 0v = 0$
+	\item	$\dotp 0v = \dotp v0 = 0$
 	\item	$\dotp vv=\norm{\vec v}^2 $
 \end{enumerate}
 }
