--- a/exercises/10_05_ex_14.tex
+++ b/exercises/10_05_ex_14.tex
@@ -1,7 +1,7 @@
-{Passes through $P=(-2,5)$, parallel to $\vec d = \la 0,1\ra$.
+{Passes through $P=(-2,5,4)$, parallel to $\vec d = \la 0,1, 3\ra$.
 }
-{vector: $\ell(t) = \la-2,5\ra + t\la 0,1\ra$\\
-parametric: $x= -2$, $y=5+t$\\
-symmetric: not defined
+{vector: $\ell(t) = \la-2,5,4\ra + t\la 0,1, 3\ra$\\
+parametric: $x= -2$, $y=5+t$, $z=4+3t$\\
+symmetric: $x=-2$, $y-5=(z-4)/3$
 }
 
