Not sure why there were two pdfs of Calculus I, but only one was getting updated by recompiling.

--- a/exercises/02_05_exercises.tex
+++ b/exercises/02_05_exercises.tex
@@ -2,7 +2,7 @@
 \exinput{exercises/02_05_ex_05}
 \exinput{exercises/02_05_ex_01}
 \exinput{exercises/02_05_ex_02}
-\exinput{exercises/02_05_ex_03}
+%\exinput{exercises/02_05_ex_03}
 \exinput{exercises/02_05_ex_04}
 \exinput{exercises/02_05_ex_53}
 \printproblems
